# libmqtthelper

./: CMakeLists.txt  README.md  mqtthelper.c
include/: mqtthelper-config.h.in  mqtthelper.h
tests/: CMakeLists.txt  main.cpp  mosquitto.h
